page 2 horizontal scroll snap fixed

--- a/style.css
+++ b/style.css
@@ -1,39 +1,114 @@
 html, body {
-    /* background-color: #212121; */
-    font-family: 'Roboto';
-    color: #7e7e7e;
+    font-family: 'Roboto Mono';
+    /* font-family: 'Helvetica', monospace; */
+    margin: 0;
+    background-color: black;
+    color: #cad1df;
+}
+
+html {
+    scroll-snap-type: y mandatory;
+}
+
+.page-navbar {
+    background-color: #3f0e1a;
+    position: fixed;
+    height: 70px;
+    font-size: 30px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page-navbar-titles>p {
+    display: block;
+    margin: 0px;
+    padding-left: 6px;
+}
+.page-title {
+    /* transform: translate(0, 8%); */
+    font-size: 1.5em;
+    font-weight: 900;
+}
+.page-subtitle {
+    font-size: 15px;
+}
+
+section {
+    height: 100vh;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+    padding-top: 65px;
     display: grid;
-    grid-template-rows: 50px 1fr;
-    margin: 0;
+    /* justify-content: center; */
 }
 
-.profile-header {
-    /* background-color: #c65c55; */
-    padding: 15px;
-    border: none;
-    display: grid;
-    grid-template-columns: 1fr 241px;
+nav {
+    height: 30px;
 }
 
-.profile-header-info {
-    font-size: 100px;
-    font-weight: 800;
-    font-family: 'Roboto Serif';
-    padding: 0;
-    display: inline-block;
-    color: #212121;
-    margin: 0;
-}
-.profile-header-info-sub {
-    font-size: 32px;
-    color: #212121;
-    opacity: 0.5;
-    font-family: 'Roboto Serif';
-    margin: 0;
-    padding: 0;
+.homepage.p1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.profile-header-pfp {
-    width: 241px;
+.profile-image {
+    width: 250px;
+    height: 250px;
+    /* background-color: lightcoral; */
+}
+.profile-image > img {
+    width: inherit;
+    height: inherit;
     border-radius: 4px;
+
 }
+
+.profile-info {
+    margin-top: 6px;
+    width: 250px;
+    /* background-color: lightseagreen; */
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+.profile-info>p {
+    margin: 0;
+    font-size: 12px;
+    justify-self: center;
+}
+
+.homepage.p2 {
+    background-color: lightcoral;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.carousel-wrapper {
+    max-height: 80vh;
+    width: 50vh;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    display: flex;
+    overflow-x: auto;
+    scrollbar-color: none;
+    scroll-snap-type: x mandatory;
+    scrollbar-width: none;
+}
+.carousel-wrapper::-webkit-scrollbar {
+    display: none;
+}
+
+.carousel-wrapper .item {
+    min-width: 50vh;
+    height: 80vh;
+    scroll-snap-align: start;
+    scroll-snap-stop: always;
+}
+
+
